--- a/src/style.css
+++ b/src/style.css
@@ -30,6 +30,7 @@
   --color-highlight-yellow: #facc15;
   --color-highlight-orange: #f97316;
   --color-highlight-pink: #ec4899;
+  --color-highlight-blue: #60a5fa;
   --color-highlight-green: #4ade80;
   --color-highlight-red: #f87171;
 
